// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<BackgroundView>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
        "paddingHorizontal": 24,
        "width": "100%",
      }
    }
  >
    <Memo(Pressable)
      style={
        {
          "backgroundColor": "#049",
          "borderRadius": 16,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Back
      </Text>
    </Memo(Pressable)>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 30,
          }
        }
      >
        Mu
      </Text>
    </View>
  </View>
  <ScrollView
    style={
      {
        "flex": 1,
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "gap": 8,
          "paddingBottom": 48,
        }
      }
    >
      <View
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "paddingBottom": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EEF",
                "borderRadius": 16,
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "padding": 8,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <ContinentSvg
              code="MU"
            />
          </View>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#EEF",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 25,
          }
        }
      >
        Stats
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Two letter code: 
        MU
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Number of countries: 
        1
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Number of languages: 
        1
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 25,
          }
        }
      >
        Countries
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#049",
            "borderRadius": 16,
            "display": "flex",
            "flexDirection": "row",
            "gap": 8,
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 50,
            }
          }
        >
          🗿
        </Text>
        <Text
          style={
            {
              "color": "#EEF",
              "flex": 1,
              "flexWrap": "wrap",
              "fontSize": 25,
            }
          }
        >
          Zerker
        </Text>
      </View>
    </View>
  </ScrollView>
</BackgroundView>
`;

exports[`should render with ERROR response status 1`] = `
<BackgroundView>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
        "paddingHorizontal": 24,
        "width": "100%",
      }
    }
  >
    <Memo(Pressable)
      style={
        {
          "backgroundColor": "#049",
          "borderRadius": 16,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Back
      </Text>
    </Memo(Pressable)>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 30,
          }
        }
      />
    </View>
  </View>
  <ScrollView
    style={
      {
        "flex": 1,
        "padding": 24,
      }
    }
  >
    <Text
      style={
        {
          "color": "#EEF",
        }
      }
    >
      Something went wrong
    </Text>
  </ScrollView>
</BackgroundView>
`;

exports[`should render with LOADING response status 1`] = `
<BackgroundView>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
        "paddingHorizontal": 24,
        "width": "100%",
      }
    }
  >
    <Memo(Pressable)
      style={
        {
          "backgroundColor": "#049",
          "borderRadius": 16,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Back
      </Text>
    </Memo(Pressable)>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 30,
          }
        }
      />
    </View>
  </View>
  <ScrollView
    style={
      {
        "flex": 1,
        "padding": 24,
      }
    }
  >
    <ActivityIndicator
      size="large"
    />
  </ScrollView>
</BackgroundView>
`;
